# Jellyfin-Manager

./: .gitignore  README.md  jellyfin-manager.desktop  jellyfin_manager.py  launch.sh  pyproject.toml  requirements.txt  run.py  setup_env.sh
src/: main.py
src/core/: __init__.py  config.py  docker_manager.py  log_streamer.py
src/ui/: __init__.py  main_window.py
src/ui/widgets/: __init__.py  control_panel.py  log_viewer.py  status_widget.py
src/utils/: signals.py
